env panel url setup

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 PUBLIC_PANEL_URL=https://flowai-shop-panel-1.vercel.app
+FRONTEND_URL=https://flowai-shop-panel-1-owyauquc8-serhats-projects-cbfdb63c.vercel.app
